objects/hed__Plan_Requirement__c.object
<CustomObject>
    <description>This object will be the various course requirements that would need to be met to achieve the particular Program Plan</description>
    <fields>
        <fullName>hed__Category__c</fullName>
        <description>Category for the Plan Requirement.</description>
        <inlineHelpText>Specify a category for the the Plan Requirement.</inlineHelpText>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Required</fullName>
                </value>
                <value>
                    <fullName>Optional</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>hed__Course__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup field to find a Course.</description>
        <inlineHelpText>Click to search for a Course.</inlineHelpText>
        <label>Course</label>
        <referenceTo>hed__Course__c</referenceTo>
        <relationshipLabel>Plan Requirements</relationshipLabel>
        <relationshipName>Plan_Requirements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>hed__Credits__c</fullName>
        <description>A field that can contain the credits a student receives for completing a specific course, or the total number of credits needed for type of requirement.</description>
        <inlineHelpText>Specify the number of credits a student receives when satisfying this requirement.</inlineHelpText>
        <label>Credits</label>
        <precision>6</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>hed__Description__c</fullName>
        <description>The description of Plan Requirement.</description>
        <inlineHelpText>Describe the Plan Requirement.</inlineHelpText>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>hed__Plan_Requirement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to Plan Requirement to support multiple levels of requirements. A generic requirement could have a list of optional courses that satisfy that requirement.</description>
        <inlineHelpText>Click to search for a Plan Requirement.</inlineHelpText>
        <label>Parent Plan Requirement</label>
        <referenceTo>hed__Plan_Requirement__c</referenceTo>
        <relationshipLabel>Plan Requirements</relationshipLabel>
        <relationshipName>Plan_Requirements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>hed__Program_Plan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Look up field to program plan.</description>
        <inlineHelpText>Click to search for a Program Plan.</inlineHelpText>
        <label>Program Plan</label>
        <referenceTo>hed__Program_Plan__c</referenceTo>
        <relationshipLabel>Plan Requirements</relationshipLabel>
        <relationshipName>Plan_Requirements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>hed__Sequence__c</fullName>
        <description>The progression of courses</description>
        <inlineHelpText>The progression of courses</inlineHelpText>
        <label>Sequence</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Plan Requirement</label>
    <listViews>
        <fullName>hed__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Plan Requirement Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Plan Requirements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>